--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
         <link rel="icon" href="https://avatars.mds.yandex.net/get-zen_doc/1594475/pub_5d56a9ee2f4ad700ad1ddb1d_5d56abc5fe289100ac82dbf7/scale_1200">
     </head>
     <body>
-        <div class="container">
-            <div class="wrapper">
-                
-            </div>
+        <div class="row">
+            <div class="wrapper"></div>
         </div>
-
         <script src="js/script.js"></script>
     </body>
 </html>
